[package]
name = "wdp-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = { version = "1.0.108", features = [] }
indicatif = "0.17.7"
